# imagine-nn

./: .gitignore  CMakeLists.txt  LICENSE  LocalResponseNormalization.lua  MeanSubtraction.lua  Pooling.lua  README.md  ROIPooling.cu  ROIPooling.lua  ROIWarping.cu  ROIWarping.lua  ROIWarpingBilinearSample.cu  ROIWarpingBilinearSample.lua  ROIWarpingGridGenerator.lua  SpatialAveragePooling.cu  SpatialAveragePooling.lua  SpatialConstAffine.lua  SpatialCrossResponseNormalization.cu  SpatialCrossResponseNormalization.lua  SpatialMaxPooling.cu  SpatialMaxPooling.lua  SpatialMaxPoolingCUDNN.lua  SpatialPyramidPooling.lua  SpatialSameResponseNormalization.lua  SpatialStochasticPooling.cu  SpatialStochasticPooling.lua  common.h  ffi.lua  init.lua  inn-1.0-0.rockspec  test.lua  utils.lua
cmake/: FindCudaArch.cmake
test/: test_jacobian.lua  test_lrn.lua  test_roiwarping.lua
